# ghostpost

./: README.md  db.sqlite3  pyproject.toml
ghostapp/: admin.py  forms.py  models.py  urls.py  views.py
ghostapp/migrations/: 0001_initial.py  0002_auto_20200820_1806.py  0003_auto_20200821_1254.py
ghostpost/: settings.py  urls.py
templates/: base.html  boasts.html  generic_form.html  index.html  post_detail.html  roasts.html  votes.html
